Minor refactor in preparation for creating Intermediate Representation.